fixed minor bugs and create table

--- a/menu.html
+++ b/menu.html
@@ -33,7 +33,7 @@
           </a>
         </li>
         <li>
-          <a href="stock.html"> <i class="fas fa-box"></i>Estoque</a>
+          <a href="estoque.html"> <i class="fas fa-box"></i>Estoque</a>
         </li>
 
         <li>
