update css and fix minor bugs

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Sistema de Gerenciamento">
     <meta name="author" content="KD devs" />
-    <meta name="keywords" content=" theme template">
+    <meta name="keywords" content=" kf theme template">
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.json" />
     <!-- Title Page-->
@@ -34,8 +34,8 @@
     <!-- Main CSS-->
     <link href="css/theme.css" rel="stylesheet" media="all">
     <style>
-        .container {
-            height: 1000px;
+        .body {
+            height: 1200px;
         }
     </style>
 </head>
@@ -43,9 +43,9 @@
 <body class="animsition">
     <div class="page-wrapper">
         <div class="page-content--bge5">
-            <div class="container  ">
+            <div class="container  pb-5">
 
-                <div class="login-wrap">
+                <div class="login-wrap ">
                     <div class="bg-white" style="border: gray 1px solid;">
                         <h2 class="text-info  text-center pt-2 mb-2">LOGIN</h2>
                         <div class="login-logo bg-black">
@@ -53,8 +53,7 @@
                                 <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
                             </a>
                         </div>
-                        <div class="login-form ml-3 mr-3 login-content "
-                            style="background-color: rgb(230, 230, 230) !important; ">
+                        <div class="login-form ml-3 mr-3 login-content bg-info">
                             <form action="" method="post">
                                 <div class="form-group pt-2 text-dark font-weight-bold">
                                     <label>Email </label>
@@ -66,19 +65,19 @@
                                     <input class="au-input au-input--full" type="password" name="password"
                                         placeholder="Senha" id="password" required>
                                 </div>
-                                <div class="login-checkbox font-weight-bold ">
+                                <div class="login-checkbox ">
                                     <label>
                                         <input class="bg-white " type="checkbox" name="remember"
                                             id="form-password">Lembrar-me
                                     </label>
-                                    <label>
+                                    <label class="text-white">
                                         <a href="#">Esqueceu a Senha?</a>
                                     </label>
                                 </div>
 
                                 <div class="mt-4">
-                                    <button class="au-btn au-btn--block btn-info m-b-20" type="button" id="login">
-                                        <b>
+                                    <button class="au-btn au-btn--block btn bg-white m-b-20" type="button" id="login">
+                                        <b class="text-dark">
                                             Entrar</b>
 
                                     </button>
@@ -97,7 +96,7 @@
                             <div class="register-link pb-5">
                                 <h6>
                                     Não tem uma conta?
-                                    <a href="register.html">Cadastre-se aqui</a>
+                                    <a href="register.html" class="text-white">Cadastre-se aqui</a>
                                 </h6>
                             </div>
                         </div>
