--- a/table.html
+++ b/table.html
@@ -75,9 +75,8 @@
               <div class="col-md-12 ">
                 <div class="table-responsive table-responsive-data2" style="border: 1px solid rgb(0, 0, 0);">
                   <h3 class="text-center mt-4">Tabela Pedidos</h3>
-                  <div class="input-group col-3" >
-                    <input class="form-control" type="date" name="" placeholder="Recipient's text"
-                      aria-label="Recipient's " aria-describedby="busca data">
+                  <div class="input-group col-12 col-md-4" >
+                    <input class="form-control" type="date" name=""  aria-describedby="busca data">
                     <div class="input-group-append">
                       <button></button>
                       <span class="input-group-text bg-success text-white btn" id="busca data">Filtrar data</span>
