--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -9,8 +9,8 @@
             <i class="zmdi zmdi-search"></i>
           </button>
         </form>
-        <div class="col-md-2 mt-1"id="balcaoVendas" >
-        
+        <div class="col-md-2 mt-1" id="balcaoVendas">
+
 
         </div>
         <div class="header-button">
@@ -104,4 +104,12 @@
   } catch (error) {
     console.log(error);
   }
+
+  $("#logout").click(() => {
+
+    let url = "login.html";
+
+    sessionStorage.removeItem('user');
+    $(window.document.location).attr('href', url);
+  })
 </script>
