init upload de imagem de perfil

--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -22,7 +22,7 @@
           <div class="account-wrap ">
             <div class="account-item clearfix js-item-menu">
               <div class="image">
-                <img src="images/icon/avatar-01.jpg" alt="" />
+                <div class="usuario_foto"></div>
               </div>
               <div class="content">
                 <a class="js-acc-btn text-white" href="#" id="usuario_nome"></a>
@@ -31,7 +31,7 @@
                 <div class="info clearfix " style="background-color: rgb(204, 204, 204);">
                   <div class="image">
                     <a href="#">
-                      <img src="images/icon/avatar-01.jpg" alt="" />
+                      <div class="usuario_foto"></div>
                     </a>
                   </div>
                   <div class="content">
