--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
 <body class="animsition">
     <div class="page-wrapper">
         <div class="page-content--bge5">
-            <div class="container  pb-5">
+            <div class="container-fluid  pb-5">
 
                 <div class="login-wrap ">
                     <div class="bg-white" style="border: gray 1px solid;">
@@ -58,14 +58,14 @@
                                 <div class="form-group pt-2 text-dark font-weight-bold">
                                     <label>Email </label>
                                     <input class="au-input au-input--full" type="email" name="email" placeholder="Email"
-                                        id="email" required>
+                                        id="email" required autocomplete="email">
                                 </div>
                                 <div class="form-group font-weight-bold">
                                     <label>Senha</label>
                                     <input class="au-input au-input--full" type="password" name="password"
-                                        placeholder="Senha" id="password" required>
+                                        placeholder="Senha" id="password" autocomplete="current-password" required>
                                 </div>
-                                <div class="login-checkbox ">
+                                <div class="login-checkbox font-weight-bold ">
                                     <label>
                                         <input class="bg-white " type="checkbox" name="remember"
                                             id="form-password">Lembrar-me
@@ -75,11 +75,10 @@
                                     </label>
                                 </div>
 
-                                <div class="mt-4">
+                                <div class="mt-5">
                                     <button class="au-btn au-btn--block btn bg-white m-b-20" type="button" id="login">
                                         <b class="text-dark">
                                             Entrar</b>
-
                                     </button>
                                 </div>
 
