--- a/register.html
+++ b/register.html
@@ -34,26 +34,25 @@
 
     <!-- Main CSS-->
     <link href="css/theme.css" rel="stylesheet" media="all">
-    <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png"/>
+    <link rel="apple-touch-icon" href="./images/icons/icon-57x57.png" />
 
 </head>
 
 <body class="animsition" style="height: 1000px;">
     <div class="page-wrapper">
         <div class="page-content--bge5">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="login-wrap">
-                    <div class=" bg-white pt-2 " style="border: gray 1px solid;">
+                    <div class=" bg-white pt-2 " style="border: gray 1px solid;;">
                         <h2 class="text-info  text-center mb-2">CADASTRO</h2>
                         <div class="login-logo  bg-black">
                             <a href="#">
                                 <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
                             </a>
                         </div>
-                        <div class="login-form ml-3 mr-3 login-content "
-                            style="background-color: rgb(230, 230, 230) !important; ">
+                        <div class="login-form ml-3 mr-3 login-content bg-info text-white font-weight-bold ">
                             <form action="" method="post" id="createUser">
-                                <div class="form-group pt-1">
+                                <div class="form-group pt-2">
                                     <label>Usuario</label>
                                     <input class="au-input au-input--full" type="text" name="nome"
                                         placeholder="nome de usuario" required="true" id="nome">
@@ -61,24 +60,36 @@
                                 <div class="form-group">
                                     <label>Email</label>
                                     <input class="au-input au-input--full" type="email" name="email"
-                                        placeholder="exemplo@email.com" required="true" id="email">
+                                        placeholder="exemplo@email.com" required id="email">
                                 </div>
                                 <div class="form-group">
                                     <label>Email de Recuperação</label>
                                     <input class="au-input au-input--full" type="email" name="email_recuperacao"
-                                        id="email_recuperacao" placeholder="exemplo@outroemail.com" required="true">
+                                        id="email_recuperacao" placeholder="exemplo@outroemail.com" required>
                                 </div>
                                 <div class="row">
                                     <div class=" col-md-6 form-group">
                                         <label>Senha</label>
                                         <input class="au-input au-input--full" type="password" name="password"
-                                            placeholder="Senha" required="true" id="password">
+                                            autocomplete="new-password" placeholder="Senha" required id="password">
                                     </div>
                                     <div class="col-md-6 form-group">
                                         <label>Confirme a Senha</label>
                                         <input class="au-input au-input--full" type="password" name="password"
-                                            placeholder="Confirme a Senha" required="true">
+                                            autocomplete="new-password" placeholder="Confirme a Senha" required>
                                     </div>
+                                    <div class="row ">
+                                        <div class=" col-md-6 ml-3">
+                                            <label for="">Imagem</label>
+                                            <img class="img" id="image" src="http://placehold.it/220x220" alt="Picture">
+                                            <input class="btn" name="imagem" id="foto" type="file"
+                                                onchange="encodeImgtoBase64(this)" />
+
+                                        </div>
+
+                                    </div>
+                                    <a id="convertImg" href=""></a>
+
                                 </div>
 
                                 <div class="login-checkbox">
@@ -86,8 +97,9 @@
                                         <input type="checkbox" name="aggree">Aceita os termos de uso?
                                     </label>
                                 </div>
-                                <button class="au-btn au-btn--block au-btn-- btn-info m-b-20" type="button"
-                                    id="submit">Cadastro</button>
+                                <button class="au-btn au-btn--block bg-white btn m-b-20" type="button" id="submit">
+                                    <p class="text-dark font-weight-bold">Cadastrar</p>
+                                </button>
 
                                 <!--
                                 <div class="social-login-content">
@@ -102,7 +114,7 @@
                             <div class="register-link pb-3">
                                 <p>
                                     Já tem Conta ?
-                                    <a href="login.html" class="text-info">Logar</a>
+                                    <a href="login.html" class="text-dark"> Logar</a>
                                 </p>
                             </div>
                         </div>
@@ -131,29 +143,36 @@
     <script src="vendor/circle-progress/circle-progress.min.js"></script>
     <script src="vendor/perfect-scrollbar/perfect-scrollbar.js"></script>
     <script src="vendor/chartjs/Chart.bundle.min.js"></script>
-    <script src="vendor/select2/select2.min.js">
-    </script>
-
+    <script src="vendor/select2/select2.min.js"> </script>
+    <script src="./js/jquery-image-blob.min.js"></script>
     <!-- Main JS-->
     <script src="js/main.js"></script>
+    <script src="./js/register.js"></script>
     <script>
         $("#submit").click(function () {
             var obj = {
                 nome: '',
                 email: '',
                 password: '',
-                email_recuperacao: ''
+                email_recuperacao: '',
+                foto: ''
             }
+            let aux = $("#foto")[0].files[0];;
+
 
             obj.nome = $("#nome").val();
             obj.email = $("#email").val();
             obj.password = $("#password").val();
-            obj.email_recuperacao = $("#email_recuperacao ").val();
-
-           
+            obj.email_recuperacao = $("#email_recuperacao").val();
+            obj.foto = result;
             // var post_url = "http://localhost:3000/user/create";
 
+            // let img_url = "https://api.imgbb.com/1/upload?key=cc6802445a8fe48713fbbf176fa47179";
+
             var post_url = "https://kd-gerenciador.herokuapp.com/user/create";
+
+
+
             $.ajax({
                 url: post_url,
                 type: 'POST',
@@ -162,9 +181,11 @@
 
                 //document.location.reload();
                 window.location.href = "login.html";
+         
             });
         });
     </script>
+
 </body>
 
 </html>
