--- a/navbar-desktop.html
+++ b/navbar-desktop.html
@@ -29,9 +29,9 @@
               </div>
               <div class="account-dropdown js-dropdown" style="border:1px solid black">
                 <div class="info clearfix " style="background-color: rgb(204, 204, 204);">
-                  <div class="image">
+                  <div class="image bg-white">
                     <a href="#">
-                      <div class="usuario_foto"></div>
+                      <div class="usuario_foto "></div>
                     </a>
                   </div>
                   <div class="content">
